Update QuackPatchResult, print in results section the output directory /scan/quack-patch